<!--
  ~ /*
  ~  * ******************************************************
  ~  *  Copyright (C) MoviePocket <prymakdn@gmail.com>
  ~  *  This file is part of MoviePocket.
  ~  *  MoviePocket can not be copied and/or distributed without the express
  ~  *  permission of Danila Prymak, Alexander Trafimchyk and Anton Pozniak
  ~  * *****************************************************
  ~  */
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MoviePocket</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="you">You</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user">User</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="biography">Biography</string>
    <string name="actors">Actors:</string>
    <string name="similar_films">Similar films:</string>
    <string name="images">Images:</string>
    <string name="more_details">More details:</string>
    <string name="trailer">Trailer:</string>
    <string name="persons">Persons</string>
    <string name="tv">TV</string>
    <string name="movies">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_at_the_cinema">Now at the cinema</string>
    <string name="halloween">Halloween</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password</string>
    <string name="publish">Publish</string>
    <string name="rate">Rate</string>
    <string name="delete">Delete</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="restore_password">Restore password</string>
    <string name="send">Send</string>
    <string name="bio">bio</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="merry_christmas">Merry Christmas</string>
    <string name="movie">movie</string>
    <string name="person">Person</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="moviess">Movies</string>
    <string name="post_mov">Posts with this movie</string>
    <string name="lists_with_this_movie">Lists with this movie</string>
    <string name="create_your_review">Create your review</string>
    <string name="edit_your_review">Edit your review</string>
    <string name="votes">Votes: </string>
    <string name="nr">NR</string>
    <string name="skip">Skip</string>
    <string name="all">All</string>
    <string name="edit_your_list">Edit your list</string>
    <string name="edit_your_post">Edit your post</string>
    <string name="create_your_post">Create your post</string>
    <string name="create_your_list">Create your list</string>
    <string name="all_posts">All posts</string>
    <string name="all_reviews">All reviews</string>
    <string name="posts_about_this_person">Posts about this person</string>
    <string name="feed">Feed</string>
    <string name="popular_actors">Popular actors:</string>
    <string name="popular_tv_series">Popular TV Series:</string>
    <string name="popular_movies">Popular movies:</string>
    <string name="tv_series">TV Series:</string>
    <string name="Movies">Movies:</string>
    <string name="new_list">New list</string>
    <string name="all_lists">All lists</string>
    <string name="delete_list">Delete list</string>
    <string name="delete_post">Delete post</string>
    <string name="list_is_empty">List is empty</string>
</resources>