<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * ******************************************************
  ~  *  Copyright (C) MoviePocket <prymakdn@gmail.com>
  ~  *  This file is part of MoviePocket.
  ~  *  MoviePocket can not be copied and/or distributed without the express
  ~  *  permission of Danila Prymak, Alexander Trafimchyk and Anton Pozniak
  ~  * *****************************************************
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_black"
        android:title="@string/title_home" />

    <item
        android:id="@+id/feedFragment"
        android:icon="@drawable/social_black"
        android:title="@string/feed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_black"
        android:title="@string/search" />

    <item
        android:id="@+id/userFragment"
        android:icon="@drawable/user_black"
        android:title="@string/user" />

</menu>